添加虚拟机记录